--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,19 +7,28 @@
   </ul>
 <% end %>
 
-<%= form_with(model: @article, local: true) do |f| %>
-  <p>
-    <%= f.label :title %><br/>
-    <%= f.text_field :title %>
-  </p>
+<div class="container">
+  <%= form_with(model: @article, class: "shadow p-3 mb-5 bg-light rounded", local: true) do |f| %>
+    
+    <div class="row justify-content-center" >
+      <div class="col-8">
+        <div class="form-group row">
+            <%= f.label :title %><br/>
+            <%= f.text_field :title, class: "form-control shadow-sm rounded" %>
+        </div>
 
-  <p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-  </p>
+        <div class="form-group row">
+            <%= f.label :description %><br/>
+            <%= f.text_area :description, rows: 10, class: "form-control shadow-sm rounded" %>
+        </div>
+        <div class="form-group row justify-content-center">
+          <%= f.submit class: "btn btn-outline-success" %>
+        </div>
+        </div>
+    </div>
+  <% end %>
 
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
+  <div class="row justify-content-center">
+  <%= link_to 'Article list', articles_path %>
+  </div>
+</div>
