--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,8 +1,4 @@
-<h1>Edit article</h1>
-
-<%= render 'form' %>
-
-<p>
-  <%= link_to 'Article list', articles_path %> |
-  <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %>
-</p>
+<div id="page-content">
+  <h1 class="text-center mt-4">Edit article</h1>
+  <%= render 'form' %>
+</div>
