--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,4 @@
-<h1>Create new article</h1>
-
-<%= render 'form' %>
-
-<p>
-  <%= link_to 'Article list', articles_path %>
-</p>
+<div id="page-content">
+  <h1 class="text-center mt-4" >Create new article</h1>
+  <%= render 'form' %>
+</div>
