--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
 <p><strong>Description: </strong><%= @article.description %></p>
 
 <p>
-  <%= link_to 'Article list', articles_path %> |
+  <%= link_to 'Article list', articles_path %>
   <%= link_to 'Edit', edit_article_path(@article) %> |
   <%= link_to 'Delete', article_path(@article), method: :delete %>
 </p>
