--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,7 +19,7 @@
     </div>
   <% end %>
 
-  <div class="row justify-content-center">
-  <%= link_to 'Article list', articles_path %>
+  <div class="row justify-content-center mb-3">
+    <%= link_to 'Article list', articles_path %>
   </div>
 </div>
