--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= render 'shared/errors' %>
+  <%= render 'shared/errors', obj: @article %>
   <%= form_with(model: @article, class: "shadow p-3 mb-5 bg-light rounded", local: true) do |f| %>
     <div class="row justify-content-center" >
       <div class="col-10">
