--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,7 +19,7 @@
         </div>
 
         <div class="form-group row justify-content-center">
-          <%= f.submit "Sign up" , class: "btn btn-outline-success" %>
+          <%= f.submit(@user.new_record? ? "Sign up" : "Update account" , class: "btn btn-outline-success") %>
         </div>
         </div>
     </div>
