--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -12,6 +12,13 @@
             <%= f.label :description %><br/>
             <%= f.text_area :description, rows: 10, class: "form-control shadow-sm rounded" %>
         </div>
+
+        <div class="form-group row">
+            <%= f.label :category %><br/>
+            <%= f.collection_select(:category_ids, Category.all, :id, :name, 
+            { prompt: "Make your selection (can't be empty)"}, { multiple: true, size: 3, class: "custom-select shadow-sm rounded" }) %>
+        </div>
+
         <div class="form-group row justify-content-center">
           <%= f.submit class: "btn btn-outline-success" %>
         </div>
